// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component HomeListView should be able to render theme 1`] = `
<Layout
  drawers={
    [
      <h1>
        Hello children
      </h1>,
    ]
  }
  hasTheme={true}
  header={
    <div>
      hello app
    </div>
  }
  mode="TwoColumns"
  one={
    <div>
      hello sidepanel
    </div>
  }
>
  <div>
    hello list
  </div>
</Layout>
`;

exports[`Component HomeListView should children transformed as array in props.drawers 1`] = `
[
  {
    "props": {
      "children": {
        "props": {
          "children": {
            "props": {
              "children": null,
            },
          },
          "label": "foo",
        },
      },
      "foo": "bar",
    },
  },
  {
    "props": {
      "children": {
        "props": {
          "children": null,
        },
      },
      "label": "foo",
    },
  },
  {
    "props": {
      "children": null,
    },
  },
]
`;

exports[`Component HomeListView should render with element props 1`] = `
<Layout
  drawers={
    [
      <h1>
        Hello children
      </h1>,
    ]
  }
  header={
    <div>
      hello app
    </div>
  }
  mode="TwoColumns"
  one={
    <div>
      hello sidepanel
    </div>
  }
>
  <div>
    hello list
  </div>
</Layout>
`;

exports[`Component HomeListView should render with object props 1`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-md-offset-3 col-md-6"
      style="overflow-y: auto; height: 100vh; margin-top: 200px;"
    >
      <h1>
        An error occurred
      </h1>
      <div>
        <p
          class="error-title"
        >
          Error
          : 
          actionCreator not found in the registry: cmf.saga.start
        </p>
        <p>
          From here you can either refresh or contact the support.
        </p>
        <button
          class="btn btn-danger btn-inverse"
          data-feature="refresh-on-error"
          style="margin: 20px;"
        >
          Refresh
        </button>
        <a
          class="btn btn-primary btn-inverse"
          data-feature="download-on-error-details"
          download="report.json"
        >
          Download details
        </a>
      </div>
    </div>
  </div>
</div>
`;
